[package]
name = "ckb-sdk-types"
version = "0.26.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

ckb-types = { git = "https://github.com/xxuejie/ckb", rev = "c168f38" }
ckb-script = { git = "https://github.com/xxuejie/ckb", rev = "c168f38", default-features = false }
ckb-jsonrpc-types = { git = "https://github.com/xxuejie/ckb", rev = "c168f38" }
ckb-hash = { git = "https://github.com/xxuejie/ckb", rev = "c168f38" }
ckb-error = { git = "https://github.com/xxuejie/ckb", rev = "c168f38" }

[dev-dependencies]
ckb-crypto = { git = "https://github.com/xxuejie/ckb", rev = "c168f38", features = ["secp"] }

[features]
default = ["ckb-script/default"]
asm = ["ckb-script/asm"]
detect-asm = ["ckb-script/detect-asm"]
logging = ["ckb-script/logging"]
